--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@ A VR Project
   </head>
   <body>
     <a-scene>
-      <a-box position="1 0.5 -3"
+      <a-box position="1 2 -7"
              rotation="0 45 0"
              color="#4CC3D9"></a-box>
+      <b-box position="2 1.5 -2"
+             rotation="0 45 0"
+             color="#4CC5D9"></b-box>
+      <c-box position="2 1 -5"
+             rotation="0 45 0"
+             color="#4BB3D9"></c-box>
 
       <a-sphere position="0 1.25 -5"
                 radius="1.25"
