Add blue box entity to index.html
Added a blue box entity to the scene.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <body>
 
     <!-- Main scene definition -->
+    <a-entity id="box" 
+                geometry="primitive:box"
+                position="0 3 -5"
+                material="color:blue">
+      </a-entity>
+
     <a-scene id="scene">
     <a-entity environment="preset:starry"></a-entity>
     </a-scene>
