--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 position="0 3 -5"
                 material="color:blue">
       </a-entity>
+    <a-entity light="type:ambient; color: white;"
+                location="0 0 0">
+      </a-entity>
+
 
     <a-scene id="scene">
     <a-entity environment="preset:starry"></a-entity>
