Fix material attribute for box entity

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a-entity id="box" 
                 geometry="primitive:box"
                 position="0 3 -5"
-                material="color:blue">
+                material="color:blue"; src:https://github.com/Sah393/VR-Final-project/blob/main/brickPattern%20(4).jpg>
       </a-entity>
     <a-entity light="type:ambient; color: white;"
                 location="0 0 0">
